--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -10,7 +10,12 @@ body .secondary_cta,
 #primary-menu ul li a {
     pointer-events: auto;
 }
-
+#primary-menu {
+  position: relative;
+  min-height: 50px;
+  margin-bottom: 20px;
+  border: 1px solid transparent;
+}
 .ip_nav li a {
     line-height: 3.5vh !important;
     height: 3.5vh !important;
@@ -35,7 +40,7 @@ body .secondary_cta,
     background-position: center center;
     background-size: contain;
     background-repeat: no-repeat;
-    visibility: hidden;
+    /*visibility: hidden;*/
     opacity: 0;
     transition: visibility .1s, opacity 1.2s linear;
 }
@@ -216,6 +221,8 @@ b {
     font-family: 'Cardo', serif;
 }
 
+
+
 @keyframes blink {
     0% {
         opacity: 1;
@@ -327,20 +334,3 @@ b {
     }
 }
 
-.mobile-menu {
-    padding-top: 15px;
-    /*overflow-y: auto;*/
-}
-
-@media (max-width: 991px) {
-    .mobile-menu {
-        position: fixed;
-        top: 0;
-        width: 240px;
-        left: -243px;
-        z-index: 100;
-        height: 100%;
-        box-shadow: 3px 0 5px rgba(0, 0, 0, 0.23);
-        background-color: #fff;
-    }
-}
