--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1035,7 +1035,7 @@ body.stretched #header.full-header .container {
 
 
 #primary-menu {
-	float: right;
+	float: left;
 	height: 100px;
 }
 
@@ -1053,10 +1053,11 @@ body.stretched #header.full-header .container {
 	opacity: 0;
 	pointer-events: none;
 	cursor: pointer;
-	font-size: 14px;
+	font-size: 20px;
 	position: absolute;
 	top: 50%;
-	margin-top: -25px;
+	margin-top: -3vh;
+	margin-left: 8vw;
 	width: 50px;
 	height: 50px;
 	line-height: 50px;
